apps/base/weave-gitops/network_policy.yaml
# During Flux installation a couple of NetworkPolicy objects in the Flux namespace created
# which deny incoming network access to the pods in Flux namespace

---
# https://github.com/fluxcd/flux2/issues/1863
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cert-manager
  namespace: flux-system
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
  - Ingress

---
# https://github.com/fluxcd/flux2/issues/1448
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-weave-gitops-from-outside
  namespace: flux-system
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16 # CHANGE THIS DEPENDING ON YOUR NETWORK LAYOUT
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ww-gitops
  policyTypes:
  - Ingress
